fixed Channel Page,  description is underneath image on small screens

--- a/my-app/src/css/channelPage.css
+++ b/my-app/src/css/channelPage.css
@@ -11,10 +11,23 @@
     width: 50%;
     height: auto;
     align-self: center;
+    margin-right: 10px;
 }
 
 
 .container {
     width: 40%;
+}
+
+@media(max-width: 768px) {
+    .flex-container {
+        flex-direction: column;
+    }
+    .image-wrapper {
+        width: 100%;
+    }
+    .container {
+        width: 100%;
+    }
 }
 
